@@ -1,5 +1,5 @@
 /*
- * Copyright  2002-2005 The Apache Software Foundation
+ * Copyright 2002-2006 The Apache Software Foundation
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -174,10 +174,12 @@ public class EchoProperties extends Task {
      *@param  prefix  The new prefix value
      */
     public void setPrefix(String prefix) {
-        PropertySet ps = new PropertySet();
-        ps.setProject(getProject());
-        ps.appendPrefix(prefix);
-        addPropertyset(ps);
+        if (prefix != null && prefix.length() != 0) {
+            PropertySet ps = new PropertySet();
+            ps.setProject(getProject());
+            ps.appendPrefix(prefix);
+            addPropertyset(ps);
+        }
     }
 
     /**
